tsqparser/TimesheetQueryParser.java
// Generated from tsqparser/TimesheetQuery.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class TimesheetQueryParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, BLOCK_COMMENT=55, STRING_LITERAL=56, STRING_LITERAL_DQ=57, 
		STRING_LITERAL_SQ=58, INLINE_COMMENT=59, INT=60, FLOAT=61, NAME=62, WHITESPACE=63, 
		NEWLINE=64, ANY=65;
	public static final int
		RULE_ruleList = 0, RULE_rule = 1, RULE_query = 2, RULE_command = 3, RULE_boolMonadicPrefixOp = 4, 
		RULE_boolDyadicInfixOp = 5, RULE_comparisonInfixOp = 6, RULE_boolExp = 7, 
		RULE_boolDyadicExp = 8, RULE_comparisonExp = 9, RULE_impliedComparisonExp = 10, 
		RULE_atomMonadicExp = 11, RULE_series = 12, RULE_seriesFunc = 13, RULE_commandFunc = 14, 
		RULE_field = 15, RULE_literal = 16, RULE_singleInstLiteral = 17, RULE_listElementLiteral = 18, 
		RULE_specialLiteral = 19, RULE_literalReplaceFunc = 20, RULE_epochSchemeIndex = 21, 
		RULE_reloadDesc = 22, RULE_projectLiteral = 23, RULE_metaprojectLiteral = 24, 
		RULE_tagLiteral = 25, RULE_epochLiteral = 26, RULE_descToken = 27, RULE_moodLiteral = 28, 
		RULE_datetimeLiteral = 29, RULE_timedeltaLiteral = 30;
	private static String[] makeRuleNames() {
		return new String[] {
			"ruleList", "rule", "query", "command", "boolMonadicPrefixOp", "boolDyadicInfixOp", 
			"comparisonInfixOp", "boolExp", "boolDyadicExp", "comparisonExp", "impliedComparisonExp", 
			"atomMonadicExp", "series", "seriesFunc", "commandFunc", "field", "literal", 
			"singleInstLiteral", "listElementLiteral", "specialLiteral", "literalReplaceFunc", 
			"epochSchemeIndex", "reloadDesc", "projectLiteral", "metaprojectLiteral", 
			"tagLiteral", "epochLiteral", "descToken", "moodLiteral", "datetimeLiteral", 
			"timedeltaLiteral"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':'", "';'", "'!'", "'|'", "'&'", "'>='", "'<='", "'>'", "'<'", 
			"'!='", "'=='", "'in'", "'('", "')'", "'description'", "'project'", "'tags'", 
			"'id'", "'start'", "'end'", "'duration'", "'epoch'", "'mood'", "'circad'", 
			"'metaproject'", "'bodyparts'", "'Location'", "'Person'", "'Food'", "'Media'", 
			"'Audiobook'", "'Podcast'", "'TVShow'", "'Movie'", "'SubjectMatter'", 
			"'.replace'", "'EpochScheme.'", "'['", "']'", "'reloadDescription()'", 
			"'Project.'", "'Metaproject.'", "'Meta.'", "'MP.'", "'Tag.'", "'Epoch.'", 
			"'Mood.'", "'datetime('", "','", "'timedelta('", "'weeks='", "'days='", 
			"'hours='", "'minutes='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "BLOCK_COMMENT", "STRING_LITERAL", 
			"STRING_LITERAL_DQ", "STRING_LITERAL_SQ", "INLINE_COMMENT", "INT", "FLOAT", 
			"NAME", "WHITESPACE", "NEWLINE", "ANY"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TimesheetQuery.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TimesheetQueryParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RuleListContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(TimesheetQueryParser.EOF, 0); }
		public List<RuleContext> rule_() {
			return getRuleContexts(RuleContext.class);
		}
		public RuleContext rule_(int i) {
			return getRuleContext(RuleContext.class,i);
		}
		public RuleListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TimesheetQueryListener ) ((TimesheetQueryListener)listener).enterRuleList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TimesheetQueryListener ) ((TimesheetQueryListener)listener).exitRuleList(this);
		}
	}

	public final RuleListContext ruleList() throws RecognitionException {
		RuleListContext _localctx = new RuleListContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_ruleList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 3532508964853882890L) != 0)) {
				{
				{
				setState(62);
				rule_();
				}
				}
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(68);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RuleContext extends ParserRuleContext {
		public QueryContext query() {
			return getRuleContext(QueryContext.class,0);
		}
		public List<CommandContext> command() {
			return getRuleContexts(CommandContext.class);
		}
		public CommandContext command(int i) {
			return getRuleContext(CommandContext.class,i);
		}
		public RuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TimesheetQueryListener ) ((TimesheetQueryListener)listener).enterRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TimesheetQueryListener ) ((TimesheetQueryListener)listener).exitRule(this);
		}
	}

	public final RuleContext rule_() throws RecognitionException {
		RuleContext _localctx = new RuleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_rule);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 3532508964853882888L) != 0)) {
				{
				setState(70);
				query();
				}
			}

			setState(73);
			match(T__0);
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 3532509858207105032L) != 0)) {
				{
				setState(74);
				command();
				setState(79);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(75);
						match(T__1);
						setState(76);
						command();
						}
						} 
					}
					setState(81);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				}
				}
			}

			setState(84);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QueryContext extends ParserRuleContext {
		public BoolExpContext boolExp() {
			return getRuleContext(BoolExpContext.class,0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TimesheetQueryListener ) ((TimesheetQueryListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TimesheetQueryListener ) ((TimesheetQueryListener)listener).exitQuery(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_query);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			boolExp();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CommandContext extends ParserRuleContext {
		public CommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command; }
	 
		public CommandContext() { }
		public void copyFrom(CommandContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SetLiteralContext extends CommandContext {
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public SetLiteralContext(CommandContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TimesheetQueryListener ) ((TimesheetQueryListener)listener).enterSetLiteral(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TimesheetQueryListener ) ((TimesheetQueryListener)listener).exitSetLiteral(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CmdFuncContext extends CommandContext {
		public CommandFuncContext commandFunc() {
			return getRuleContext(CommandFuncContext.class,0);
		}
		public CmdFuncContext(CommandContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TimesheetQueryListener ) ((TimesheetQueryListener)listener).enterCmdFunc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TimesheetQueryListener ) ((TimesheetQueryListener)listener).exitCmdFunc(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DeleteLiteralContext extends CommandContext {
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public DeleteLiteralContext(CommandContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TimesheetQueryListener ) ((TimesheetQueryListener)listener).enterDeleteLiteral(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TimesheetQueryListener ) ((TimesheetQueryListener)listener).exitDeleteLiteral(this);
		}
	}

	public final CommandContext command() throws RecognitionException {
		CommandContext _localctx = new CommandContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_command);
		try {
			setState(92);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				_localctx = new SetLiteralContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(88);
				literal();
				}
				break;
			case 2:
				_localctx = new DeleteLiteralContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(89);
				match(T__2);
				setState(90);
				literal();
				}
				break;
			case 3:
				_localctx = new CmdFuncContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(91);
				commandFunc();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BoolMonadicPrefixOpContext extends ParserRuleContext {
		public BoolMonadicPrefixOpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boolMonadicPrefixOp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TimesheetQueryListener ) ((TimesheetQueryListener)listener).enterBoolMonadicPrefixOp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TimesheetQueryListener ) ((TimesheetQueryListener)listener).exitBoolMonadicPrefixOp(this);
		}
	}

	public final BoolMonadicPrefixOpContext boolMonadicPrefixOp() throws RecognitionException {
		BoolMonadicPrefixOpContext _localctx = new BoolMonadicPrefixOpContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_boolMonadicPrefixOp);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BoolDyadicInfixOpContext extends ParserRuleContext {
		public BoolDyadicInfixOpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boolDyadicInfixOp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TimesheetQueryListener ) ((TimesheetQueryListener)listener).enterBoolDyadicInfixOp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TimesheetQueryListener ) ((TimesheetQueryListener)listener).exitBoolDyadicInfixOp(this);
		}
	}

	public final BoolDyadicInfixOpContext boolDyadicInfixOp() throws RecognitionException {
		BoolDyadicInfixOpContext _localctx = new BoolDyadicInfixOpContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_boolDyadicInfixOp);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			_la = _input.LA(1);
			if ( !(_la==T__3 || _la==T__4) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComparisonInfixOpContext extends ParserRuleContext {
		public ComparisonInfixOpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comparisonInfixOp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TimesheetQueryListener ) ((TimesheetQueryListener)listener).enterComparisonInfixOp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TimesheetQueryListener ) ((TimesheetQueryListener)listener).exitComparisonInfixOp(this);
		}
	}

	public final ComparisonInfixOpContext comparisonInfixOp() throws RecognitionException {
		ComparisonInfixOpContext _localctx = new ComparisonInfixOpContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_comparisonInfixOp);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 8128L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BoolExpContext extends ParserRuleContext {
		public BoolDyadicExpContext boolDyadicExp() {
			return getRuleContext(BoolDyadicExpContext.class,0);
		}
		public BoolExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boolExp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TimesheetQueryListener ) ((TimesheetQueryListener)listener).enterBoolExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TimesheetQueryListener ) ((TimesheetQueryListener)listener).exitBoolExp(this);
		}
	}

	public final BoolExpContext boolExp() throws RecognitionException {
		BoolExpContext _localctx = new BoolExpContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_boolExp);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			boolDyadicExp();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BoolDyadicExpContext extends ParserRuleContext {
		public List<ComparisonExpContext> comparisonExp() {
			return getRuleContexts(ComparisonExpContext.class);
		}
		public ComparisonExpContext comparisonExp(int i) {
			return getRuleContext(ComparisonExpContext.class,i);
		}
		public BoolDyadicInfixOpContext boolDyadicInfixOp() {
			return getRuleContext(BoolDyadicInfixOpContext.class,0);
		}
		public BoolDyadicExpContext boolDyadicExp() {
			return getRuleContext(BoolDyadicExpContext.class,0);
		}
		public BoolDyadicExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boolDyadicExp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TimesheetQueryListener ) ((TimesheetQueryListener)listener).enterBoolDyadicExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TimesheetQueryListener ) ((TimesheetQueryListener)listener).exitBoolDyadicExp(this);
		}
	}

	public final BoolDyadicExpContext boolDyadicExp() throws RecognitionException {
		BoolDyadicExpContext _localctx = new BoolDyadicExpContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_boolDyadicExp);
		int _la;
		try {
			setState(112);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(102);
				comparisonExp();
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__3 || _la==T__4) {
					{
					setState(103);
					boolDyadicInfixOp();
					setState(104);
					comparisonExp();
					}
				}

				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(108);
				comparisonExp();
				setState(109);
				boolDyadicInfixOp();
				setState(110);
				boolDyadicExp();
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComparisonExpContext extends ParserRuleContext {
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public ComparisonInfixOpContext comparisonInfixOp() {
			return getRuleContext(ComparisonInfixOpContext.class,0);
		}
		public SeriesContext series() {
			return getRuleContext(SeriesContext.class,0);
		}
		public ImpliedComparisonExpContext impliedComparisonExp() {
			return getRuleContext(ImpliedComparisonExpContext.class,0);
		}
		public AtomMonadicExpContext atomMonadicExp() {
			return getRuleContext(AtomMonadicExpContext.class,0);
		}
		public ComparisonExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comparisonExp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TimesheetQueryListener ) ((TimesheetQueryListener)listener).enterComparisonExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TimesheetQueryListener ) ((TimesheetQueryListener)listener).exitComparisonExp(this);
		}
	}

	public final ComparisonExpContext comparisonExp() throws RecognitionException {
		ComparisonExpContext _localctx = new ComparisonExpContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_comparisonExp);
		try {
			setState(125);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(114);
				literal();
				{
				setState(115);
				comparisonInfixOp();
				setState(116);
				series();
				}
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				{
				setState(118);
				series();
				setState(119);
				comparisonInfixOp();
				}
				setState(121);
				literal();
				}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(123);
				impliedComparisonExp();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(124);
				atomMonadicExp();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
